@@ -15,6 +15,8 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.TimeZone;
+import java.util.stream.Collectors;
+
 import org.apache.calcite.DataContext;
 import org.apache.calcite.adapter.enumerable.NotNullImplementor;
 import org.apache.calcite.adapter.enumerable.NullPolicy;
@@ -83,7 +85,7 @@ public class UserDefinedFunctionUtils {
       if (argTypes.isEmpty()) {
         throw new IllegalArgumentException("Function requires at least one argument.");
       }
-      RelDataType firstArgType = argTypes.getFirst();
+      RelDataType firstArgType = argTypes.get(0);
       return createArrayType(typeFactory, firstArgType, true);
     };
   }
@@ -109,7 +111,7 @@ public class UserDefinedFunctionUtils {
    * @return the converted operands
    */
   public static List<Expression> convertToExprValues(List<Expression> operands, RexCall rexCall) {
-    List<RelDataType> types = rexCall.getOperands().stream().map(RexNode::getType).toList();
+    List<RelDataType> types = rexCall.getOperands().stream().map(RexNode::getType).collect(Collectors.toList());
     return convertToExprValues(operands, types);
   }
 
@@ -124,7 +126,7 @@ public class UserDefinedFunctionUtils {
   public static List<Expression> convertToExprValues(
       List<Expression> operands, List<RelDataType> types) {
     List<ExprType> exprTypes =
-        types.stream().map(OpenSearchTypeFactory::convertRelDataTypeToExprType).toList();
+        types.stream().map(OpenSearchTypeFactory::convertRelDataTypeToExprType).collect(Collectors.toList());
     List<Expression> exprValues = new ArrayList<>();
     for (int i = 0; i < operands.size(); i++) {
       Expression operand = Expressions.convert_(operands.get(i), Object.class);
@@ -159,7 +161,7 @@ public class UserDefinedFunctionUtils {
         (translator, call, translatedOperands) -> {
           List<Expression> operands =
               convertToExprValues(
-                  translatedOperands, call.getOperands().stream().map(RexNode::getType).toList());
+                  translatedOperands, call.getOperands().stream().map(RexNode::getType).collect(Collectors.toList()));
           Expression exprResult = Expressions.call(type, methodName, operands);
           return Expressions.call(exprResult, "valueForCalcite");
         };
@@ -177,7 +179,7 @@ public class UserDefinedFunctionUtils {
     Expression properties =
         Expressions.call(
             UserDefinedFunctionUtils.class, "restoreFunctionProperties", translator.getRoot());
-    operandsWithProperties.addFirst(properties);
+    operandsWithProperties.add(0, properties);
     return Collections.unmodifiableList(operandsWithProperties);
   }
 
@@ -190,7 +192,7 @@ public class UserDefinedFunctionUtils {
         (translator, call, translatedOperands) -> {
           List<Expression> operands =
               convertToExprValues(
-                  translatedOperands, call.getOperands().stream().map(RexNode::getType).toList());
+                  translatedOperands, call.getOperands().stream().map(RexNode::getType).collect(Collectors.toList()));
           List<Expression> operandsWithProperties = prependFunctionProperties(operands, translator);
           Expression exprResult = Expressions.call(type, methodName, operandsWithProperties);
           return Expressions.call(exprResult, "valueForCalcite");
