@@ -170,18 +170,16 @@ public class ExprValueUtils {
 
   /** Construct ExprValue from Object with ExprCoreType. */
   public static ExprValue fromObjectValue(Object o, ExprType type) {
-    switch (type) {
-      case TIMESTAMP:
-        return new ExprTimestampValue((String) o);
-      case DATE:
-        return new ExprDateValue((String) o);
-      case TIME:
-        return new ExprTimeValue((String) o);
-      case DATETIME:
-        return new ExprDatetimeValue((String) o);
-      default:
-        return fromObjectValue(o);
-    }
+      if (type.equals(TIMESTAMP)) {
+          return new ExprTimestampValue((String) o);
+      } else if (type.equals(DATE)) {
+          return new ExprDateValue((String) o);
+      } else if (type.equals(TIME)) {
+          return new ExprTimeValue((String) o);
+      } else if (type.equals(DATETIME)) {
+          return new ExprDatetimeValue((String) o);
+      }
+      return fromObjectValue(o);
   }
 
   public static Byte getByteValue(ExprValue exprValue) {
@@ -232,13 +230,13 @@ public class ExprValueUtils {
     ExprValue wholePathValue = value.keyValue(String.join(PATH_SEP, paths));
     // For array types only first index currently supported.
     if (value.type().equals(ExprCoreType.ARRAY)) {
-      wholePathValue = value.collectionValue().getFirst().keyValue(paths.getFirst());
+      wholePathValue = value.collectionValue().get(0).keyValue(paths.get(0));
     }
 
     if (!wholePathValue.isMissing() || paths.size() == 1) {
       return wholePathValue;
     } else {
-      return resolveRefPaths(value.keyValue(paths.getFirst()), paths.subList(1, paths.size()));
+      return resolveRefPaths(value.keyValue(paths.get(0)), paths.subList(1, paths.size()));
     }
   }
 }
